--- a/frontend/app/views/accessions/new.html.erb
+++ b/frontend/app/views/accessions/new.html.erb
@@ -1,7 +1,7 @@
 <%= setup_context(:object => @accession) %>
 
 <%= form_for @accession, :as => "accession", :url => {:action => :create}, :html => {:class => 'form-horizontal', :id => "accession_form"} do |f| %>
-  <%= form_context :accession, @accession.to_hash(true) do |form| %>
+  <%= form_context :accession, @accession do |form| %>
     <div class="row-fluid">
       <div class="span3">
         <%= render :partial => "sidebar" %>
