--- a/frontend/app/views/agents/new.html.erb
+++ b/frontend/app/views/agents/new.html.erb
@@ -1,7 +1,7 @@
 <%= setup_context :object => @agent, :controller => :agents,  :type => @agent.agent_type, :title => "#{I18n.t("actions.new_prefix")} #{I18n.t("agent.agent_type.#{@agent.agent_type}")}" %>
 
 <%= form_for @agent, :as => "agent", :url => {:action => :create}, :html => {:class => 'form-horizontal', :id => "agent_form"} do |f| %>
-  <%= form_context :agent, @agent.to_hash(true) do |form| %>
+  <%= form_context :agent, @agent do |form| %>
     <div class="row-fluid">
       <div class="span3">
         <%= render :partial => "sidebar", :locals => {:form => form} %>
