--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -7,7 +7,7 @@
    <div class="span9">
     <%= render :partial => "toolbar" %>
     <div class="record-pane">
-     <%= readonly_context @agent.agent_type.intern, @agent.to_hash(true) do |readonly| %>
+     <%= readonly_context @agent.agent_type.intern, @agent do |readonly| %>
         <h2><%= @agent.names[0]['sort_name'] %>  <span class="label label-info"><%= I18n.t("agent._html.singular") %></span></h2>
 
         <%= render :partial => "shared/flash_messages" %>
