--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -5,7 +5,7 @@
   <div class="span9">
     <%= render :partial => "toolbar" %>
     <div class="record-pane">
-      <%= readonly_context :archival_object, @archival_object.to_hash(true) do |readonly| %>
+      <%= readonly_context :archival_object, @archival_object do |readonly| %>
         <h2><%= @archival_object.title %> <span class="label label-info"><%= I18n.t("archival_object._html.singular") %></span></h2>
         <section id="basic_information">
           <h3><%= I18n.t("archival_object._html.section.basic_information") %></h3>
