--- a/frontend/app/views/digital_objects/new.html.erb
+++ b/frontend/app/views/digital_objects/new.html.erb
@@ -1,7 +1,7 @@
 <%= setup_context :object => @digital_object %>
 
 <%= form_for @digital_object, :as => "digital_object", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-  <%= form_context :digital_object, @digital_object.to_hash(true) do |form| %>
+  <%= form_context :digital_object, @digital_object do |form| %>
     <div class="row-fluid">
        <div class="span3">
           <%= render :partial => "digital_objects/sidebar" %>
