--- a/frontend/app/views/groups/edit.erb
+++ b/frontend/app/views/groups/edit.erb
@@ -9,7 +9,7 @@
       <h2><%= !@group.description.empty? ? @group.description : "#{I18n.t("actions.edit")} #{I18n.t("group._html.singular")}" %> <span class="label label-info"><%= I18n.t("group._html.singular") %></span></h2>
 
       <%= form_for @group, :as => "group", :url => {:action => :update, :id => @group.id}, :html => {:class => 'form-horizontal'} do |f| %>
-        <%= form_context :group, @group.to_hash(true) do |form| %>
+        <%= form_context :group, @group do |form| %>
           <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
           <%= render :partial => "groups/form", :locals => {:form => form} %>
         <% end %>
