--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @repository, :as => "repository", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-  <%= form_context :repository, @repository.to_hash(true) do |form| %>
+  <%= form_context :repository, @repository do |form| %>
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal">×</button>
       <h3><%= I18n.t("actions.create") %> <%= I18n.t("repository._html.singular") %></h3>
