--- a/frontend/app/views/resources/_new_inline.html.erb
+++ b/frontend/app/views/resources/_new_inline.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @resource, :as => "resource", :url => {:action => :create}, :html => {:class => 'form-horizontal', :id => "resource_form"} do |f| %>
-  <%= form_context :resource, @resource.to_hash(true) do |form| %>
+  <%= form_context :resource, @resource do |form| %>
     <div class="row-fluid">
       <div class="span3">
         <%= render :partial => "resources/sidebar" %>
