--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -5,7 +5,7 @@
   <div class="span9">
     <%= render :partial => "toolbar" %>
     <div class="record-pane">
-      <%= readonly_context :resource, @resource.to_hash(true) do |readonly| %>
+      <%= readonly_context :resource, @resource do |readonly| %>
         <h2><%= @resource.title %> <span class="label label-info"><%= I18n.t("resource._html.singular") %></span></h2>
         <section id="basic_information">
           <h3><%= I18n.t("resource._html.section.basic_information") %></h3>
