--- a/frontend/app/views/users/new.html.erb
+++ b/frontend/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
    <div class="span12">
       <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("user._html.section.account") %></h2>
      <%= form_for @user, :as => "createuser", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-       <%= form_context :user, @user.to_hash(true) do |form| %>
+       <%= form_context :user, @user do |form| %>
          <%= render :partial => "users/form", :locals => {:form => form} %>
 
          <div class="form-actions">
