Have JSONModel call .to_hash as data comes in to save all the various spec files & templates from doing it.

--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -69,7 +69,7 @@
                       </div>
                     </div>
                     <div id="agent_contact_<%= index %>" class="accordion-body collapse">
-                      <%= read_only_view(contact.to_hash) %>
+                      <%= read_only_view(contact) %>
                     </div>
                   </div>
                 <% end %>
