--- a/frontend/app/views/dates/_show.html.erb
+++ b/frontend/app/views/dates/_show.html.erb
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div id="<%= section_id %>_date_<%= index %>" class="accordion-body collapse">
-          <%= read_only_view(date.to_hash) %>
+          <%= read_only_view(date) %>
         </div>
       </div>
     <% end %>
