--- a/frontend/app/views/extents/_show.html.erb
+++ b/frontend/app/views/extents/_show.html.erb
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div id="<%= section_id %>_extent_<%= index %>" class="accordion-body collapse">
-          <%= read_only_view(extent.to_hash) %>
+          <%= read_only_view(extent) %>
         </div>
       </div>
     <% end %>
