--- a/frontend/app/views/deaccessions/_show.html.erb
+++ b/frontend/app/views/deaccessions/_show.html.erb
@@ -37,7 +37,7 @@
         </div>
         <div id="deaccession_<%= index %>" class="accordion-body collapse">
           <div class="subrecord-form-container">
-            <%= read_only_view(deaccession.to_hash) %>
+            <%= read_only_view(deaccession) %>
             <%= render :partial => "dates/show", :locals => { :dates =>[deaccession["date"]], :section_id => "deaccession_#{index}_date_", :section_title => I18n.t("deaccession.dates") } %>
             <% if deaccession["extents"].length > 0 %>
               <%= render :partial => "extents/show", :locals => { :extents => deaccession["extents"], :section_id => "deaccession_#{index}_extents_" } %>
