--- a/frontend/app/views/rights_statements/_show.html.erb
+++ b/frontend/app/views/rights_statements/_show.html.erb
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div id="rights_statement_<%= index %>" class="accordion-body collapse">
-          <%= read_only_view(rights_statement.to_hash) %>
+          <%= read_only_view(rights_statement) %>
           <% if rights_statement["external_documents"].length > 0 %>
             <%= render :partial => "external_documents/show", :locals => { :external_documents => rights_statement["external_documents"], :id => "rights_statement_#{index}_external_documents" } %>
           <% end %>
