--- a/frontend/app/views/locations/_toolbar.html.erb
+++ b/frontend/app/views/locations/_toolbar.html.erb
@@ -1,4 +1,4 @@
-<% if user_can?('update_location') %>
+<% if user_can?('update_location_record') %>
   <div class="row-fluid">
     <div class="span12">
       <div class="record-toolbar">
