--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -25,15 +25,17 @@
         <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="javascript:void(0);" class="linker-browse-btn"><%= I18n.t("actions.browse") %></a></li>
-          <li class="dropdown-submenu pull-left">
-            <a href="javascript:void(0);"><%= I18n.t("actions.create") %></a>
-            <ul class="dropdown-menu">
-              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_person, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_person._html.singular") %></a></li>
-              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_family, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_family._html.singular") %></a></li>
-              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_corporate_entity, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_corporate_entity._html.singular") %></a></li>
-              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_software, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_software._html.singular") %></a></li>
-            </ul>
-          </li>
+          <% if user_can?('update_agent_record') %>
+            <li class="dropdown-submenu pull-left">
+              <a href="javascript:void(0);"><%= I18n.t("actions.create") %></a>
+              <ul class="dropdown-menu">
+                <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_person, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_person._html.singular") %></a></li>
+                <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_family, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_family._html.singular") %></a></li>
+                <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_corporate_entity, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_corporate_entity._html.singular") %></a></li>
+                <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_software, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_software._html.singular") %></a></li>
+              </ul>
+            </li>
+          <% end %>
         </ul>
       </div>
     </div>
