--- a/frontend/app/views/accessions/_toolbar.html.erb
+++ b/frontend/app/views/accessions/_toolbar.html.erb
@@ -17,7 +17,7 @@
               </ul>
             <% end %>
           </div>
-          <% if user_can?('manage_repository') %>
+          <% if user_can?('suppress_archival_record') %>
             <% if @accession.suppressed %>
               <div class="btn-group">
                 <div class="btn btn-small btn-inline-form">
@@ -31,6 +31,8 @@
                 </div>
               </div>
             <% end %>
+          <% end %>
+          <% if user_can?('delete_archival_record') %>
             <div class="btn-group">
               <div class="btn btn-inline-form">
                 <%= button_to I18n.t("actions.delete"), {:controller => :accessions, :action => :delete, :id => @accession.id}, :method => :post, :class => "btn btn-small btn-danger delete-record", :"data-confirmation" => true, :"data-title" => I18n.t("actions.delete_confirm_title"), :"data-message" => I18n.t("actions.delete_confirm_message"), :"data-confirm-btn-label" => "#{I18n.t("actions.delete")}", :"data-confirm-btn-class" => "btn-danger" %>
