--- a/frontend/app/views/agents/name_forms/_agent_software.html.erb
+++ b/frontend/app/views/agents/name_forms/_agent_software.html.erb
@@ -13,7 +13,7 @@
     <%= form.label_and_textfield "sort_name", {:field_opts => {:automatable => true}}%>
     <%= form.label_and_textfield "sort_name" %>
     <hr/>
-    <%= form.label_and_textfield "description_type" %>
+    <%= form.label_and_select "description_type", form.possible_options_for('description_type', true) %>
     <%= form.label_and_textarea "description_note" %>
     <%= form.label_and_textfield "description_citation" %>
   </div>
