--- a/frontend/app/views/container/_template.html.erb
+++ b/frontend/app/views/container/_template.html.erb
@@ -2,12 +2,12 @@
 
 <% define_template "container", jsonmodel_definition(:container) do |form| %>
   <div>
-    <%= form.label_and_textfield "type_1" %>
+    <%= form.label_and_select "type_1", form.possible_options_for('type_1', true) %>
     <%= form.label_and_textfield "indicator_1" %>
     <%= form.label_and_textfield "barcode_1" %>
-    <%= form.label_and_textfield "type_2" %>
+    <%= form.label_and_select "type_2", form.possible_options_for('type_2', true) %>
     <%= form.label_and_textfield "indicator_2" %>
-    <%= form.label_and_textfield "type_3" %>
+    <%= form.label_and_select "type_3", form.possible_options_for('type_3', true) %>
     <%= form.label_and_textfield "indicator_3" %>
 
     <div class="subrecord-form-container">
