--- a/frontend/app/views/events/_form.html.erb
+++ b/frontend/app/views/events/_form.html.erb
@@ -5,7 +5,7 @@
     <h3><%= I18n.t("event._html.section.basic_information") %></h3>
     <fieldset>
       <%= form.label_and_select "event_type", form.possible_options_for("event_type") %>
-      <%= form.label_and_textfield "outcome" %>
+      <%= form.label_and_select "outcome", form.possible_options_for('outcome', true) %>
       <%= form.label_and_textarea "outcome_note" %>
     </fieldset>
   </section>
