--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -7,27 +7,31 @@
     <div class="record-pane">
       <%= readonly_context :resource, @resource do |readonly| %>
         <h2><%= @resource.title %> <span class="label label-info"><%= I18n.t("resource._html.singular") %></span></h2>
+
+        <% define_template "resource", jsonmodel_definition(:resource) do |form, resource| %>
         <section id="basic_information">
           <h3><%= I18n.t("resource._html.section.basic_information") %></h3>
   
-          <%= readonly.label_and_textfield "title" %>
-          <% if @resource.id_0 %><%= readonly.label_and_fourpartid %><% end %>
-          <%= readonly.label_and_select "level", readonly.possible_options_for("level", true) %>
-          <%= readonly.label_and_textfield "other_level" %>
-          <%= readonly.label_and_select "resource_type", readonly.possible_options_for("resource_type", true) %>
-          <%= readonly.label_and_select "language", readonly.possible_options_for("language", true) %>
-          <%= readonly.label_and_textarea "container_summary" %>
-          <%= readonly.label_and_boolean "publish" %>
-          <%= readonly.label_and_boolean "restrictions" %>
-          <%= readonly.label_and_textarea "repository_processing_note" %>
+          <%= form.label_and_textfield "title" %>
+          <% if resource.id_0 %><%= form.label_and_fourpartid %><% end %>
+          <%= form.label_and_select "level", form.possible_options_for("level", true) %>
+          <%= form.label_and_textfield "other_level" %>
+          <%= form.label_and_select "resource_type", form.possible_options_for("resource_type", true) %>
+          <%= form.label_and_select "language", form.possible_options_for("language", true) %>
+          <%= form.label_and_textarea "container_summary" %>
+          <%= form.label_and_boolean "publish" %>
+          <%= form.label_and_boolean "restrictions" %>
+          <%= form.label_and_textarea "repository_processing_note" %>
   
-          <% if @resource.ead_id or @resource.ead_location %>
+          <% if resource.ead_id or resource.ead_location %>
             <hr/>
-            <%= readonly.label_and_textfield "ead_id" %>
-            <%= readonly.label_and_textfield "ead_location" %>
+            <%= form.label_and_textfield "ead_id" %>
+            <%= form.label_and_textfield "ead_location" %>
           <% end %>
-  
         </section>
+        <% end %>
+  
+        <% readonly.emit_template("resource", @resource) %>
   
         <%= render :partial => "extents/show", :locals => { :extents => @resource.extents, :section_id => "resource_extents_" } %>
   
