Add ability to display a tooltip by setting an corresponding '_tooltip' locale entry for a given property

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -32,9 +32,17 @@ fieldset {
   }
 }
 
-form .control-group.required {
+form .control-group {
+  &.required {
+    .control-label {
+      font-weight: bold;    
+    }
+  }
+
   .control-label {
-    font-weight: bold;
+    &.has-tooltip {
+      border-bottom: 1px dotted #EEE;
+    }
   }
 }
 
