Add ability to assign a field placeholder by providing a '_placeholder' definition in the locale file

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -381,7 +381,8 @@ ul.subrecord-form-list {
   }
 }
 
-.subrecord-form textarea {
+.subrecord-form textarea,
+.controls textarea {
   width: 90%;
 }
 
