--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -93,6 +93,7 @@
           <% end %>
           <ul class="nav pull-right">
            <%= render "shared/header_user" %>
+           <li><%= link_to_help %></li>
          </ul>
         </div><!-- /.nav-collapse -->
       </div>
