--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -229,6 +229,33 @@ h2 > .label {
   margin-bottom: 5px;
 }
 
+/* Context Help related styles */
+.context-help {
+  .context-help-icon {
+    .transition(opacity 0.5s);
+    .opacity(30);
+  }
+
+  &:hover {
+    .context-help-icon {
+      .transition(opacity 0.5s);
+      .opacity(100);
+    }
+  }
+}
+h3 > .context-help {
+  float: right;
+  margin: 6px 6px 0 0;
+}
+
+h4 > .context-help {
+  float: right;
+  margin: 2px 6px 0 0;
+}
+
+.record-pane > .context-help {
+  float: right;
+}
 /* Tooltip overrides */
 .tooltip-inner {
   text-align: left;
