--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -2,7 +2,10 @@
 
 <% define_template("accession", jsonmodel_definition(:accession)) do |form| %>
   <section id="basic_information">
-    <h3><%= I18n.t "accession._html.section.basic_information" %></h3>
+    <h3>
+      <%= I18n.t "accession._html.section.basic_information" %>
+      <%= link_to_help :topic => "accession_basic_information" %>
+    </h3>
     <fieldset>
        <%= form.label_and_textfield "title" %>
        <%= form.label_and_fourpartid %>
