--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -10,6 +10,7 @@
 
         <div class="span9">
           <div class="record-pane">
+            <%= link_to_help :topic => "accession" %>
             <h2><%= @accession.title%> <span class="label label-info"><%= I18n.t("accession._html.singular") %></span></h2>
             <input type="hidden" name="_method" value="put" />
             <%= render :partial => "accessions/form", :locals => {:form => form} %>
