--- a/frontend/app/views/deaccessions/_template.html.erb
+++ b/frontend/app/views/deaccessions/_template.html.erb
@@ -8,7 +8,10 @@
 
     <div class="subrecord-form-container">
       <section id="deaccession_date" class="subrecord-form">
-        <h4><%= I18n.t("deaccession.dates") %></h4>
+        <h4>
+          <%= I18n.t("deaccession.dates") %>
+          <%= link_to_help :topic => "deaccession_deaccession_date" %>
+        </h4>
         <div class="subrecord-form-container">
           <%= form.fields_for(form.obj["date"] || {"label" => "deaccession"}, "date") do | date | %>
             <% render :partial => "dates/template", :locals => {:form => form} %>
@@ -19,7 +22,7 @@
     </div>
 
     <div class="subrecord-form-container">
-      <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents", :heading_size => "h4"} %>
+      <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents", :heading_size => "h4", :help_topic => "deaccession_extents"} %>
     </div>
   </div>
 <% end %>
