--- a/frontend/app/views/rights_statements/_template.html.erb
+++ b/frontend/app/views/rights_statements/_template.html.erb
@@ -80,7 +80,7 @@
     <% end %>
 
     <div class="subrecord-form-container">
-      <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
+      <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents", :heading_size => "h4", :help_topic => "rights_statement_external_documents"} %>
     </div>
   </div>
 
