--- a/frontend/app/views/shared/_subrecord_form.html.erb
+++ b/frontend/app/views/shared/_subrecord_form.html.erb
@@ -6,6 +6,7 @@
   template_erb = "#{name.to_s}/template" if template_erb.blank?
   js_template_name = "template_#{template}" if js_template_name.blank?
   custom_action_template = false if custom_action_template.blank?
+  help_topic = form.help_path_for(name) if help_topic.blank?
 %>
 
 <%= render :partial=>template_erb, :locals => {:form => form} %>
@@ -14,6 +15,7 @@
 
   <<%= heading_size %> class="subrecord-form-heading">
     <%= I18n.t("#{singular}._html.plural") %>
+    <%= link_to_help :topic => help_topic %>
     <% if custom_action_template %>
       <%= render :partial => custom_action_template %>
     <% else %>
