Trigger help tooltips manually to allow for either hover or click invocation.. click sticks and offers a close action; hover will close upon mouseleave event;

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -232,4 +232,11 @@ h2 > .label {
 /* Tooltip overrides */
 .tooltip-inner {
   text-align: left;
+
+  .tooltip-close {
+    float: right;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+  }
 }
