--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -93,7 +93,9 @@
           <% end %>
           <ul class="nav pull-right">
            <%= render "shared/header_user" %>
-           <li><%= link_to_help %></li>
+           <% if ArchivesSpaceHelp.enabled? %>
+             <li><%= link_to_help %></li>
+           <% end %>
          </ul>
         </div><!-- /.nav-collapse -->
       </div>
