--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -45,7 +45,6 @@
           <li class="empty"><span class="icon-info-sign"></span> <%= I18n.t "navbar.repositories_none" %></li>
         <% end %>
         <% if user_can?('create_repository') %>
-          <li class="divider"></li>
           <li><%= link_to I18n.t("navbar.repositories_create"), {:controller => :repository, :action => :new}, "data-toggle" => "modal-ajax" %></li>
           <% if session[:repo] %>
             <li><%= link_to I18n.t("navbar.manage_groups"), :controller => :groups, :action => :index %></li>
@@ -57,8 +56,10 @@
         <% if user_can?('manage_users') %>
           <li><%= link_to I18n.t("navbar.manage_enumerations"), :controller => :enumerations, :action => :index %></li>
         <% end %>
-        <li class="divider"></li>
-        <li><%= link_to_help :label => I18n.t("help.help_center") %></li>
+        <% if ArchivesSpaceHelp.enabled? %>
+          <li class="divider"></li>
+          <li><%= link_to_help :label => I18n.t("help.help_center") %></li>
+        <% end %>
         <li class="divider"></li>
         <li><%= link_to I18n.t("navbar.logout"), :controller => "session",:action => "logout"%></li>
       </ul>
