--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -11,6 +11,7 @@
           <h3><%= I18n.t("archival_object._html.section.basic_information") %></h3>
           <%= readonly.label_and_textfield "title" %>
           <%= readonly.label_with_field "ref_id", "<div class='identifier-display'><div class='identifier-display-part'>#{readonly["ref_id"]}</div></div>" %>
+          <%= readonly.label_and_textfield "component_id" %>
           <%= readonly.label_and_select "level", readonly.possible_options_for("level", true) %>
           <%= readonly.label_and_textfield "other_level" %>
           <%= readonly.label_and_select "language", readonly.possible_options_for("language", true) %>
