Fix HTML5 elements in IE7/8 not being recognised so nothing works; fix js errors when editing notes and creating from the linker;

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -345,6 +345,11 @@ ul.subrecord-form-list {
     border: 1px dashed #CCC;
     margin: 10px 0;
   }
+  .ui-sortable-helper {
+    .subrecord-form-fields {
+      margin: 0;
+    }
+  }
   .drag-handle {
     position: absolute;
     left: 5px;
