Tweak public app to treat repositories more as a facet rather than a context; introduce stub show templates for resource and archival object; introduced basic breadcrumb trail;

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -14,7 +14,6 @@ h2 > .label {
   .return-to-search {
     margin-top: -4px;
   }
-
 }
 
 .nav-pane {
@@ -133,4 +132,43 @@ h2 > .label {
 
 .repository-list {
 
+}
+
+.icon-agent_person {background-position: -168px 0;}
+.icon-agent_software {background-position: -360px -144px;}
+.icon-agent_corporate_entity {background-position: -432px -144px;}
+.icon-agent_family {background-image: url(../../archivesspace/icon-family.png); background-position: 0 0;}
+.icon-resource {background-position: -264px -24px;}
+.icon-archival_object {background-position: -24px -24px;}
+.icon-digital_object {background-position: -384px -120px;}
+.icon-digital_object_component {background-position: -456px -24px;}
+.icon-accession {background-position: -168px -24px;}
+.icon-subject {background-position: 0 -48px;}
+.icon-location {background-position: -24px -72px;}
+.icon-repository {background-position: 0 -144px;}
+
+.results-list {
+  clear:both;
+  border-top: 1px solid #EEE;
+  margin: 0 0 10px;
+  list-style: none;
+
+  .result {
+    h3 {
+      font-size: 1.3em;
+      margin: 0;
+
+      span {
+        vertical-align: baseline;
+      }
+    }
+    border-bottom: 1px solid #EAEAEA;
+
+    &:nth-child(2n) {
+      background-color: #F9F9F9;
+    }
+    &:last-child {
+      border-color: #EEE;
+    }
+  }
 }
