--- a/public/app/assets/stylesheets/archivesspace/header.less
+++ b/public/app/assets/stylesheets/archivesspace/header.less
@@ -10,6 +10,27 @@
   margin-bottom: 0;
 }
 
+.navbar .container.top {
+  border-bottom: 1px solid #E6E6E6;
+}
+
+.navbar .container.bottom {
+  padding: 4px 0;
+  border-top: 1px solid #FFF;
+  text-align: center;
+
+  form {
+    margin: 0;
+  }
+}
+
+#global-search-box {
+  margin: 0;
+  width: 40%;
+  min-width: 300px;
+}
+
+
 .navbar-search .input-append input {
   float: left;
 }
