--- a/public/app/views/layouts/application.html.erb
+++ b/public/app/views/layouts/application.html.erb
@@ -15,7 +15,6 @@
     <div class="branding-container container">
       <div class="row-fluid">
         <%= render "site/branding" %>
-        <%= render "site/repo_selector" %>
       </div>
     </div>
     <div class="container">
@@ -25,6 +24,7 @@
 
   <div class="container">
     <div class="content-pane">
+      <%= render :partial => "site/breadcrumb" %>
       <%= yield %>
     </div>
   </div>
