--- a/public/app/views/site/_header.html.erb
+++ b/public/app/views/site/_header.html.erb
@@ -13,10 +13,10 @@
               <%= link_to raw('<span class="icon-home"></span>'), :controller => :site, :action => :index %>
             </li>
             <li class="divider-vertical"></li>
-            <li><%= link_to "Repositories", "#" %></li>
-            <li><%= link_to "Collections", "#" %></li>
-            <li><%= link_to "Subjects", "#" %></li>
-            <li><%= link_to "Locations", "#" %></li>
+            <li><%= link_to "Repositories", {:controller => :site, :action => :repository, :repo_id => nil} %></li>
+            <li><%= link_to "Collections", {:controller => :site, :action => :search, :type => "resource"} %></li>
+            <li><%= link_to "Subjects",  {:controller => :site, :action => :search, :type => "subject"} %></li>
+            <li><%= link_to "Locations",  {:controller => :site, :action => :search, :type => "location"} %></li>
           </ul>
         </div>
         <div class="container bottom">
