--- a/public/app/views/site/index.html.erb
+++ b/public/app/views/site/index.html.erb
@@ -1,3 +1,8 @@
 <%= setup_context :title => "Home", :suppress_breadcrumb => true %>
-
-Welcome to the Archives Space public interface.
+<div class="content-pane">
+  <div class="row-fluid">
+    <div class="span12">
+      <p>Welcome to the Archives Space public interface.</p>
+    </div>
+  </div>
+</div>
