--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -8,7 +8,7 @@ h2 > .label {
 }
 
 .breadcrumb {
-  margin-top: -@baseLineHeight;
+  border-top: 1px solid #FFF;
   .box-shadow(~"inset 0 -1px 0 rgba(0,0,0,.05), 0 1px 10px rgba(0,0,0,.05)");
 
   .return-to-search {
@@ -28,6 +28,16 @@ h2 > .label {
 
 .navbar .brand:hover {
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.125);
+}
+
+.navbar {
+  .nav {
+    width: 100%;
+
+    > li.pull-right {
+      float: right !important;
+    }
+  }
 }
 
 .modal > form {
@@ -83,6 +93,11 @@ h2 > .label {
     height: @baseLineHeight;
     line-height: @baseLineHeight;
   }
+}
+
+.control-group .controls.label-only {
+  line-height: 18px;
+  padding-top: 6px;
 }
 
 .label-only .identifier-display-part {
@@ -154,13 +169,18 @@ h2 > .label {
   list-style: none;
 
   .result {
-    h3 {
-      font-size: 1.3em;
+    h3, h4 {
       margin: 0;
 
       span {
         vertical-align: baseline;
       }
+    }
+    h3 {
+      font-size: 1.3em;
+    }
+    h4 {
+      padding: 5px 0;
     }
     border-bottom: 1px solid #EAEAEA;
 
