--- a/public/app/views/site/_header.html.erb
+++ b/public/app/views/site/_header.html.erb
@@ -17,19 +17,17 @@
             <li><%= link_to "Collections", {:controller => :site, :action => :search, :type => "resource"} %></li>
             <li><%= link_to "Subjects",  {:controller => :site, :action => :search, :type => "subject"} %></li>
             <li><%= link_to "Locations",  {:controller => :site, :action => :search, :type => "location"} %></li>
+            <li class="pull-right">
+              <%= form_tag(url_for(:controller => :site, :action => :search), :method => :get, :class => "navbar-form pull-left") do %>
+                  <div class="input-append">
+                    <input id="global-search-box" type="text" class="span2" placeholder="<%= I18n.t("navbar.search_placeholder") %>" name="q" value="<%= params[:q] %>"/>
+                    <div class="btn-group">
+                      <button id="global-search-button" class="btn last"><span class=" icon-search"></span></button>
+                    </div>
+                  </div>
+              <% end %>
+            </li>
           </ul>
-        </div>
-        <div class="container bottom">
-          <%= form_tag(url_for(:controller => :site, :action => :search), :method => :get) do %>
-            <div class="search-form">
-              <div class="input-append">
-                <input id="global-search-box" type="text" class="span2" placeholder="<%= I18n.t("navbar.search_placeholder") %>" name="q" value="<%= params[:q] %>"/>
-                <div class="btn-group">
-                  <button id="global-search-button" class="btn"><span class=" icon-search"></span></button>
-                </div>
-              </div>
-            </div>
-          <% end %>
         </div>
       </div><!-- /.nav-collapse -->
     </div>
