--- a/public/app/views/site/repositories.html.erb
+++ b/public/app/views/site/repositories.html.erb
@@ -1,25 +1,27 @@
-<div class="row-fluid">
-  <div class="span3">
-    
-  </div>
-  <div class="span9">
-    <div class="record-pane">
-      <ul class="results-list">
-        <% @repositories.each do |repository| %>
-          <li class="result">
-            <h3>
-              <%= icon_for "repository" %>
-              <%= link_to repository['repo_code'], :controller => :site, :action => :repository, :repo_id => repository.id %>
-            </h3>
-            <div class="result-summary">
-              <div class="label label-info pull-right"><%=  I18n.t("repository._html.singular") %></div>
-              <p class="">
-                <%= repository['description'] %>
-              </p>
-            </div>
-          </li>
-        <% end %>
-      </ul>
+<div class="content-pane">
+  <div class="row-fluid">
+    <div class="span3">
+      
+    </div>
+    <div class="span9">
+      <div class="record-pane">
+        <ul class="results-list">
+          <% @repositories.each do |repository| %>
+            <li class="result">
+              <h3>
+                <%= icon_for "repository" %>
+                <%= link_to repository['repo_code'], :controller => :site, :action => :repository, :repo_id => repository.id %>
+              </h3>
+              <div class="result-summary">
+                <div class="label label-info pull-right"><%=  I18n.t("repository._html.singular") %></div>
+                <p class="">
+                  <%= repository['description'] %>
+                </p>
+              </div>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
