Update help.yml to refer to the test help content;

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -259,6 +259,8 @@ h4 > .context-help {
 /* Tooltip overrides */
 .tooltip-inner {
   text-align: left;
+  line-height: @baseLineHeight;
+  font-weight: normal;
 
   .tooltip-close {
     float: right;
