adds MARCXML import links to frontend

--- a/frontend/app/views/import/index.html.erb
+++ b/frontend/app/views/import/index.html.erb
@@ -20,7 +20,7 @@
       <% if @import_results %>
         <h3><%= I18n.t("import.import_report") %></h3>
         <pre><%= @import_results %></pre>
-        <h3><%= I18n.t("import.ead_import_another") %></h3>
+        <h3><%= I18n.t("import.import_another") %></h3>
       <% end %>
 
       <fieldset>
