--- a/frontend/app/views/accessions/_sidebar.html.erb
+++ b/frontend/app/views/accessions/_sidebar.html.erb
@@ -7,7 +7,7 @@
     <% end %>
 
     <% if not controller.action_name === "show" or @accession.dates.length > 0 %>
-      <li><a href="#accession_dates_"><%= I18n.t "extent._html.plural" %> <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#accession_dates_"><%= I18n.t "date._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if controller.action_name != "show" || @accession.related_resources.length > 0 %>
