--- a/public/app/views/site/index.html.erb
+++ b/public/app/views/site/index.html.erb
@@ -1,8 +1,32 @@
 <%= setup_context :title => "Home", :suppress_breadcrumb => true %>
-<div class="content-pane">
+  <br/>
+
   <div class="row-fluid">
-    <div class="span12">
-      <p>Welcome to the Archives Space public interface.</p>
+    <div class="span8">
+      <div class="well">
+        <h3>Welcome to the Archives Space.</h3>
+        <p>Find what you're looking for:</p>
+        <%= form_tag(url_for(:controller => :site, :action => :search), :method => :get) do %>
+            <input type="text" class="input-large" style="margin: 0; height: 34px; font-size: 1.4em; width: 75%;" placeholder="<%= I18n.t("navbar.search_placeholder") %>" name="q" value="<%= params[:q] %>"/>
+            <button id="global-search-button" class="btn btn-large">Search</button>
+        <% end %>
+      </div>
+    </div>
+    <div class="span4">
+      <h4>Content Here</h4>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
+      <hr/>
+      <p>Something else...</p>
     </div>
   </div>
-</div>
+  <div class="row-fluid">
+    <div class="span12">
+      <div class="well">
+        Some other information goes here.
+      </div>
+    </div>
+  </div>
