Tweak repo summary to use new name attribute

--- a/public/app/views/site/repositories.html.erb
+++ b/public/app/views/site/repositories.html.erb
@@ -15,7 +15,7 @@
               <div class="result-summary">
                 <div class="label label-info pull-right"><%=  I18n.t("repository._html.singular") %></div>
                 <p class="">
-                  <%= repository['description'] %>
+                  <%= repository['name'] %>
                 </p>
               </div>
             </li>
